<resources>
    <string name="app_name">FinalAplikasiGithubUser</string>

    <string name="followers">Followers </string>
    <string name="following">Following </string>
    <string name="name">Name :</string>
    <string name="location">Location :</string>
    <string name="bio">Bio :</string>
    <string name="company">Company :</string>
    <string name="share">Share</string>
    <string name="smaple">sample</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="detail_user">Detail User</string>
    <string name="favorite_user">Favorite User</string>
    <string name="search_user">Search User</string>
</resources>